fix height being cut off on mobile

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -7,11 +7,11 @@
   color: $purple-400;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  margin-top: 24px;
+  height: 100%;
+  max-height: 100dvh;
   overflow: hidden;
-  padding: 8px 16px 24px 16px;
-  scroll-snap-align: start;
+  padding: 8px 16px;
+  scroll-snap-align: end;
 }
 
 .modal__toggle {
@@ -31,6 +31,7 @@
   color: $purple-400;
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .modal__header-notification {
