--- a/scss/index.scss
+++ b/scss/index.scss
@@ -23,6 +23,7 @@ body {
 .ticket-info {
   padding: 12px 16px;
   scroll-snap-align: start;
+  margin-bottom: 24px;
 }
 
 .actions {
